--- a/app/views/shared/_user_events.html.erb
+++ b/app/views/shared/_user_events.html.erb
@@ -1,8 +1,5 @@
 <% if current_user?(@user) %>
 <div>
-  <h1><a href="<%= pictures_user_path %>">
-    View your <%= pluralize current_user.pictures.count, "picture" %>
-  </a></h1><br><br>
 
     <% if @user.microposts.any? %>
       <h3>Number of posts: <%= current_user.microposts.count %></h3>
@@ -12,14 +9,14 @@
       <%= will_paginate @microposts %>
     <% end %>
 
-<h2>Number of events you have been invited to: <%= current_user.events_attended.count %></h2>
+<h2>Events you have been invited to: <%= current_user.events_attended.count %></h2>
     <ol class="microposts">
       <li>
         <%= render current_user.events_attended %><br>
       </li>
     </ol>
 
-    <h2>Number of events you have hosted: <%= current_user.events_hosted.count %></h2>
+    <h2>Events you have hosted: <%= current_user.events_hosted.count %></h2>
     <ol class="microposts">
       <li>
           <%= render current_user.events_hosted %><br>
