--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,9 @@
-Please email richard.p.kuo@gmail.com if you have any questions.
+<%= provide(:title, "Contact" ) %>
+
+<h1>Contact</h1>
+
+<div class="hero-unit">
+
+<h2>Contact information coming soon!<br><br>
+</h2>
+</div>
