--- a/app/views/uploaders/show.html.erb
+++ b/app/views/uploaders/show.html.erb
@@ -1,21 +1,27 @@
 <% provide(:title, @user.name) %>
-<div class="row">
-  <aside class="span4">
- 
-      <%= render 'shared/user_info' %>
-
-      <%= render 'shared/host_event' %>
 
       <%= render 'shared/event_navigation' %>
-    
-      <%= render 'shared/stats' %>
 
-  </aside>
-  <div class="span8">
+<div class="row span10">
+<div class="row">
+<div class="span2">
+
+  <h1><%= gravatar_for @user, size: 85 %></h1>
+
+</div>
+
+<div class="span5">
+
+  <h2><%= @user.name %></h2>
+  <h3><%= @user.email %></h3>
+
+</div>
+
+<div class="span4">
 
 <% unless current_user?(@user) %>
 
-    <%= render 'uploader_form' if host?(current_event) %>
+  <h1><%= render 'uploader_form' if host?(current_event) %></h1>
 
 <% else %>
 
@@ -23,9 +29,20 @@ You cannot invite yourself!
 
 <% end %>
 
+</div>
+
+<br><br>
+<br><br>
 <br><br>
 
-<%= render 'shared/user_events' %>
+</div>
 
-  </div>
+<div class="row span10">
+
+  <%= render 'shared/user_events' %>
+
+</div>
+
+</div>
+</div>
 </div>
