--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,14 +1,8 @@
 <%= provide(:title, @event.title ) %>
-<div class="row">
-  <aside class="span4">
-
-    <%= render 'shared/user_info' %>
 
     <%= render 'shared/event_navigation' %>
 
-    <% render 'shared/stats' %>
-
-  </aside>
+<div class="row span10">
 
 <% if current_user.reverse_invitations.find_by_event_id(params[:event_id]) || host?(@event) %>
 
@@ -20,4 +14,6 @@
 
 <% end %>
 
+</div>
+</div>
 </div>
