fixed pictures and thumbs

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,20 +9,19 @@
 <h2><%= @event.description %></h2>
 <h3>Hosted by <%= link_to User.find_by_id(@event.host_id).name, User.find_by_id(@event.host_id) %> <%= time_ago_in_words(@event.created_at) %> ago | <%= pluralize(@event.pictures.count, "Picture")%> | <%= pluralize(@event.uploaders.count, "Attendee") %></h3>
 
-<a href="<%= event_pictures_path(@event) %>"><i class="icon-resize-full icon-black"></i>Full Screen</a>
+<a href="<%= event_pictures_path(@event) %>"><i class="icon-resize-full icon-black"></i>Slideshow</a>
 <br>
 <br>
 
 <%= will_paginate %>
 
 <% @event.pictures.each do |picture| %>
-  <%= link_to image_tag(picture.image.thumb), event_picture_path(@event, picture) %>
+  <span id="thumb"><%= link_to image_tag(picture.image.thumb), event_picture_path(@event, picture) %></span>
 <% end %>
 
 <% if @event.pictures.count == 0 %>
   There are no pictures in this album.
 <% end %>
-
 <br>
 <% else %>
 
