--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
 
           <%= link_to "#WELCOME", root_path, id: "logo" %>
           <ul class="nav pull-right">
-            <li><%= link_to "Sign in", signin_path, id: "logo" %></li>
+            <li><% link_to "Sign in", signin_path, id: "logo" %></li>
           </ul>
 
         <% end %>
