--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -14,7 +14,7 @@
 <br>
 <div>
 
-<%= will_paginate @pictures, :page_links => false %>
+<%= will_paginate :page_links => false %>
 <%= render @pictures %>
 
 
