--- a/app/views/uploaders/show.html.erb
+++ b/app/views/uploaders/show.html.erb
@@ -4,9 +4,9 @@
 
 <div class="row span10">
 <div class="row">
-<div class="span2">
+<div class="span2 offset1">
 
-  <h1><%= gravatar_for @user, size: 85 %></h1>
+  <h1><%= gravatar_for @user, size: 95 %></h1>
 
 </div>
 
