--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -235,8 +235,13 @@ a:hover {
 
 /* typography */
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5 {
   line-height: 1;
+}
+
+#thumb {
+  padding: 0px 0px;
+  line-height: 7.4;
 }
 
 h2 {
