--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,4 +1,7 @@
-<%= image_tag picture.image %>
+
+
+<%= image_tag picture.image %><br>
+<br>Uploaded by <%= User.find_by_id(picture.user_id).name %> <%= time_ago_in_words(@event.created_at) %> ago
 <% if current_user.id == picture.user_id %>
    | <%= link_to "Delete", event_picture_path(@event, picture), method: :delete, data: { confirm: "Are you sure you want to permanently delete this picture?" }, title: @event.title %>
 <% end %>
