--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,28 +1,30 @@
 <% if signed_in? %>
   <div class="row">
     <div class="hero-unit">
-      <h2>Events you have been invited to:</h2><br />
+      <h2>Events you have been invited to:</h2><br>
       <ul>
         <%= render current_user.events_attended %>
       </ul>
-      <br />
-      <h2>Events you have hosted:</h2><br />
+      <br>
+      <h2>Events you have hosted:</h2><br>
       <ul>
         <%= render current_user.events_hosted %>
       </ul>
     </div>  
   </div>
+
 <% else %>
 
+<div class="row">
 <h1>Welcome to PhotoChat</h1>
 
 <h2>The free and easy way to create and share entire photo albums with your friends.</h2>
 
 <br>
 
-  <div class="span4 hero-unit">
-<h3>New to PhotoChat? Take a minute to sign up.</h3>
-<br>
+<div class="span4 hero-unit">
+  <h3>New to PhotoChat? Take a minute to sign up.</h3>
+  <br>
     <%= form_for(@user) do |f| %>
 
       <%= render 'users/fields', f: f %>
@@ -31,7 +33,7 @@
 
     <% end %>
 <br><br>
-  </div>
+</div>
 
 <div class="span4 hero-unit">
 <h3>Already a member? Great! Welcome back.</h3>
@@ -50,5 +52,6 @@
 </div>
 <div class="span4 hero-unit">
 <h2><%= link_to "What is PhotoChat?", what_path %></h2>
+</div>
 </div>
 <% end %>
