--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,10 +1,13 @@
 <%= provide(:title, @event.title ) %>
 
-    <%= render 'shared/event_navigation' %>
+  <%= render 'shared/event_navigation' %>
 
 <div class="row span10">
 
 <% if current_user.reverse_invitations.find_by_event_id(params[:event_id]) || host?(@event) %>
+  <h1>Upload pictures to <%= Event.find(params[:event_id]).title %></h1>
+
+  <h3>We currently support .jpg .jpeg .png .gif file types.</h3><br>
 
   <%= render 'shared/file_upload' %>
 
@@ -15,5 +18,6 @@
 <% end %>
 
 </div>
+
 </div>
 </div>
