changed brand to 1337Pic

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,20 +16,20 @@
 <% else %>
 
 <div class="row">
-<h1>Welcome to PhotoChat</h1>
+<h1>Welcome to 1337Pic</h1>
 
 <h2>The free and easy way to create and share entire photo albums with your friends.</h2>
 
 <br>
 
 <div class="span4 hero-unit">
-  <h3>New to PhotoChat? Take a minute to sign up.</h3>
+  <h3>New to 1337Pic? Take a minute to sign up.</h3>
   <br>
     <%= form_for(@user) do |f| %>
 
       <%= render 'users/fields', f: f %>
 
-      <%= f.submit "Sign Up for PhotoChat", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Sign Up for 1337Pic", class: "btn btn-large btn-primary" %>
 
     <% end %>
 <br><br>
@@ -51,7 +51,7 @@
 
 </div>
 <div class="span4 hero-unit">
-<h2><%= link_to "What is PhotoChat?", what_path %></h2>
+<h2><%= link_to "What is 1337Pic?", what_path %></h2>
 </div>
 </div>
 <% end %>
