--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -5,6 +5,8 @@
 <div class="hero-unit">
 
 <h2>Coming Soon<br><br>
+We will not give any of your personal information to 3rd parties.<br>
+
 Use at your own risk!
 </h2>
 </div>
