--- a/app/views/pages/what.html.erb
+++ b/app/views/pages/what.html.erb
@@ -1,11 +1,11 @@
 <%= provide(:title, "About" ) %>
 
-<h1>What is PhotoChat?</h1>
+<h1>What is 1337Pic?</h1>
 
 <div class="hero-unit">
 
 <h2>
-PhotoChat is a website that lets you share your photos with your friends <font color="#00afff">the right way.</font>
+1337Pic is a website that lets you share your photos with your friends <font color="#00afff">the right way.</font>
 <br>
 </h2>
 
