--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,5 +4,5 @@
 
 <div class="hero-unit">
 
-<h2>Information about PhotoChat coming soon!</h2>
+<h2>Information about 1337Pic coming soon!</h2>
 </div>
