--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <% if signed_in? %>
   <div class="row">
+<h3>1337Pic is currently in beta.</h3>
     <div class="hero-unit">
       <h2>Events you have been invited to:</h2><br>
       <ul>
