fixed hero-unit margin

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,6 +15,14 @@ $lightText: #abc;
 $navbarBackgroundHighlight: #1e90ff;
 $navbarBackground: #000000;
 
+.hero-unit {
+  padding: 40px;
+}
+
+.row {
+  margin-left: -20px;
+}
+
 /* left side navigation */
 
 .left-sidenav .icon-chevron-right {
