--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,16 @@
 <% provide(:title, @user.name) %>
-<div class="row hero-unit">
-  <aside class="span2">
+<div class="row">
+  <aside class="span2 offset2">
 
     <%= gravatar_for @user, size: 200 %> 
 
-    <% if current_user.admin? %>  
+    <% if current_user.admin? %>
       <%= render 'shared/stats' %>
     <% end %>
   
   </aside>
-  <div class="span5 offset1">
+
+  <div class="span7 offset1">
 
     <h1><%= @user.name %></h1>
 
@@ -20,12 +21,12 @@
 
   </div>
 </div>
-<br>
+
+<br><br>
+
 <div class="row">
- 
-  <div class="span9 offset1">
   
     <%= render 'shared/user_events' %>
   
-  </div>
 </div>
+
