--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,10 @@
 
   <h1>Dashboard</h1>
   <h3>1337Pic is currently in beta.</h3>
-<br>
+
+<ol class="microposts">
+  <li></li>
+</ol>
 
   <div class="row">
     <div class="span5 hero-unit">
