--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
 
 <% else %>
 
-
+<body bgcolor="black">
 <h1>Welcome to 1337Pic</h1>
 
 <h2>The free and easy way to create and share entire photo albums with your friends.</h2>
