--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'shared/event_navigation' %>
 
-<div class="span10">
+<div class="span12">
 <% if current_user.reverse_invitations.find_by_event_id(params[:id]) || host?(@event) %>
 
 <h1><%= @event.title %></h1>
@@ -22,6 +22,10 @@
 <% if @event.pictures.count == 0 %>
   There are no pictures in this album.
 <% end %>
+<br><br>
+<%= render 'comments/form' %>
+<%= render 'comments/comments' %>
+
 <br>
 <% else %>
 
