--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,13 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
 </head>
-<body>
+
+<% if !signed_in? %>
+  <body bgcolor="#99ccff">
+<% else %>
+  <body>
+<% end %>
+
    <%= render 'layouts/header' %>
   <div class="container">
       <% flash.each do |key, value| %>
