--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,11 +3,11 @@
    <nav>
       Copyright (C) 2012 Richard Kuo
       <ul>
-         <li><%= link_to "About",  about_path %></li>
-         <li class="divider-vertical"></li>
-         <li><%= link_to "Terms",  terms_path %></li>
-         <li><%= link_to "Privacy",  privacy_path %></li>
-         <li><%= link_to "Contact", contact_path %></li>
+        <li><%= link_to "Feedback", feedback_path %></li>
+        <li><%= link_to "About",  about_path %></li>
+        <li><%= link_to "Terms",  terms_path %></li>
+        <li><%= link_to "Privacy",  privacy_path %></li>
+        <li><%= link_to "Contact", contact_path %></li>
       </ul>
 
    </nav>
