--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,10 +20,12 @@
                 <li><% link_to "Users", users_path, id: "navbarcustomlinks" %></li>
 
                 <li><%= link_to gravatar_for(current_user, size:45)+current_user.name, current_user, id: "navbarcustomlinks" %>
-
+<br>
                 <li class="divider"></li>
 
                 <li><%= link_to "Account Settings", edit_user_path(current_user), id: "navbarcustomlinks" %></li>
+                <li><%= link_to "Website Feedback", feedback_path, id: "navbarcustomlinks" %></li>
+                <li class="divider"></li>
                  <li><%= link_to "Sign out", signout_path, method: "delete", id: "navbarcustomlinks" %></li>
 
               </ul>
