--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,45 +35,51 @@
 
 <% else %>
 
-<body bgcolor="black">
-<h1>Welcome to 1337Pic</h1>
+<h1>Welcome to 1337Pic</h1><h3><%= link_to "1337Pic? What's 1337Pic?", what_path %></h3>
 
 <h2>The free and easy way to create and share entire photo albums with your friends.</h2>
 
 <br>
 <div class="row">
-<div class="span5 hero-unit">
-  <h3>New to 1337Pic?
-  <br>Take a minute to sign up.</h3>
-  <br>
-    <%= form_for(@user) do |f| %>
+  <div class="span5 hero-unit">
+    <h3>New to 1337Pic?
+    <br>Take a minute to sign up.</h3>
+    <br>
+      <%= form_for(@user) do |f| %>
 
-      <%= render 'users/fields', f: f %>
+        <%= render 'users/fields', f: f %>
 
-      <%= f.submit "Sign Up for 1337Pic", class: "btn btn-large btn-primary" %>
+        <%= f.submit "Sign Up for 1337Pic", class: "btn btn-large btn-primary" %>
 
-    <% end %>
+      <% end %>
 
-</div>
+  </div>
 
-<div class="span5 hero-unit">
-  <h3>Already a member?
-  <br>Welcome back.</h3>
-  <br>
-    <%= form_for(:session, url: sessions_path) do |f| %>
+  <div class="span5 hero-unit">
+    <h3>Already a member?
+    <br>Welcome back.</h3>
+    <br>
+      <%= form_for(:session, url: sessions_path) do |f| %>
       
-      <%= f.label :email %>
-      <%= f.text_field :email %>
+        <%= f.label :email %>
+        <%= f.text_field :email %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password %>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
 
-      <%= f.submit "Sign in", class: "btn btn-large btn-primary" %>
-    <% end %>
+        <br>
+
+        <%= f.submit "Sign in", class: "btn btn-large btn-primary" %>
+        <%= check_box_tag :remember_me, 1, params[:remember_me] %> Remember Me
+
+      <% end %>
+
+  </div>
+  <div class="span5 hero-unit">
+    <h3><%= link_to "Forgot password? Click here", new_password_reset_path %></h3>
+  </div>
+  
 
 </div>
-<div class="span5 hero-unit">
-<h2><%= link_to "1337Pic? What's 1337Pic?", what_path %></h2>
-</div>
-</div>
+
 <% end %>
