temp fix for image slideshow bug

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -17,7 +17,13 @@
 
 <div class="hero-unit">
 
-<%= render @pictures %>
+<% @event.pictures.each do |picture| %>
+  <%= image_tag picture.image %><br>
+  <br>Uploaded by <%= User.find_by_id(picture.user_id).name %> <%= time_ago_in_words(@event.created_at) %> ago
+  <% if current_user.id == picture.user_id %>
+   | <%= link_to "Delete", event_picture_path(@event, picture), method: :delete, data: { confirm: "Are you sure you want to permanently delete this picture?" }, title: @event.title %>
+   <% end %>
+<% end %>
 </div>
 
 <% else %>
