temp fix for email issue

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -85,7 +85,7 @@
 
   </div>
   <div class="span5 center">
-    <h3><%= link_to "Forgot password? Click here", new_password_reset_path %></h3>
+    <h3><%= link_to "Forgot password? Click here", '#' %></h3>
   </div>
   
 
