--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -13,7 +13,7 @@
 <a href="<%= event_path(@event) %>"><i class="icon-arrow-left icon-black"></i>Back to Event</a>
 <br>
 
-<%= will_paginate :page_links => false %>
+<!--<%= will_paginate :page_links => false %>-->
 
 <div class="hero-unit">
 
