--- a/app/views/uploaders/index.html.erb
+++ b/app/views/uploaders/index.html.erb
@@ -10,15 +10,13 @@
 
 <div class="span5">
   <h3>People invited: (<%= current_event.uploaders.count %>)</h3>
-<ul class="users">
-  <% @users.each do |user| %>
-    <% if current_event.uploader?(user) && current_event.host_id != user.id %>
-    <li>
-      <%= gravatar_for user, size: 59 %>
-      <%= link_to user.name, event_uploader_path(current_event, user) %><br>
-      <%= user.email %>
-    </li>
-    <% end %>
+  <ul class="users">
+    <% current_event.invitations.each do |invitation| %>
+      <li>
+        <%= gravatar_for invitation.uploader, size: 59 %>
+        <%= link_to invitation.uploader.name, event_uploader_path(current_event, invitation.uploader) %><br>
+        <%= invitation.uploader.email %>
+      </li>
   <% end %>
 </ul>
 </div>
