--- a/app/views/uploaders/index.html.erb
+++ b/app/views/uploaders/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="row span10">
 
-<h1>Invite your friends to <%= current_event.title %>!</h1><br>
+<h1>Invite your friends to <%= current_event.title %>!</h1>
 <h2>They can upload pictures!</h2><br>
 
 <div class="span5">
