--- a/app/views/user_mailer/signup_notification.text.erb
+++ b/app/views/user_mailer/signup_notification.text.erb
@@ -1,6 +1,7 @@
 Hi <%= @user.name %>,
 
-Welcome to 1337Pic! The free and easy way to create and share entire photo albums with your friends.
+Welcome to <%= link_to '1337Pic.com', root_path %>
+The free and easy way to create and share entire photo albums with your friends.
 
 You can now...
 
@@ -18,4 +19,4 @@ Please note that 1337Pic is still in beta.
 Feedback is greatly appreciated!
 
 Thanks,
-1337Pic
+<%= link_to '1337pic.com', root_path %>
