--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
 
 <% else %>
 
-<h1>Welcome to 1337Pic</h1><h3><%= link_to "1337Pic? What's 1337Pic?", what_path %></h3>
+<h1>Welcome! to 1337Pic</h1><h3><%= link_to "1337Pic? What's 1337Pic?", what_path %></h3>
 
 <h2>The free and easy way to create and share entire photo albums with your friends.</h2>
 
